@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2024-08-30 Fri 15:46 -->
+<!-- 2024-09-04 Wed 14:29 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=1024, initial-scale=1" />
 <title>Change Log</title>
@@ -230,12 +230,12 @@
 
 <tr>
 <td class="org-right"><b>Updated:</b></td>
-<td class="org-left"><i>2024-08-30 15:45:43</i></td>
+<td class="org-left"><i>2024-09-04 14:23:27</i></td>
 </tr>
 
 <tr>
 <td class="org-right"><b>Generated:</b></td>
-<td class="org-left"><i>2024-08-30 15:46:45</i></td>
+<td class="org-left"><i>2024-09-04 14:29:50</i></td>
 </tr>
 </tbody>
 </table>
@@ -330,7 +330,9 @@ old versions</li>
 <ul class="org-ul">
 <li>New
 <ul class="org-ul">
-<li>N/A</li>
+<li>barrymartin.cpp &#x2013; Barry Martin attractors</li>
+<li>tinkerbell.cpp &#x2013; Tinkerbell attractors</li>
+<li>tinkerbell_search.cpp &#x2013; Search for interesting Tinkerbell parameters</li>
 </ul></li>
 <li>Updated
 <ul class="org-ul">
